--- a/Project1_expressions_alert/index.html
+++ b/Project1_expressions_alert/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<script src="main.js"></script>
 </head>
 
 <body>
-	<script src="JavaScript_File.js"></script>
+	<button onclick="My_First_Function()" id="Button_Text">
+		Click Me!
+		</button>
+
 
 </body>
 </html>
