--- a/Project1_expressions_alert/index.html
+++ b/Project1_expressions_alert/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<title>Project_Functions</title>
 	<meta charset="UTF-8">
 	<script src="main.js"></script>
 </head>
