--- a/Project2_functions/Index.html
+++ b/Project2_functions/Index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Project2_Functions</title>
 	<meta charset="UTF-8">
-	<script src="main.js"></script>
+	<script src="JS/main.js"></script>
 </head>
 
 <body>
-<p id="first">Cake</p>
-<p>Cookies</p>
+    <!--Explaination-->
+    <p>This is a simple explaination as to what I am doing. I am doing RANDOM things using JavaScript and HTML</p>
+
+<!--Adding a click function for the Concatenate-->
+<p id = "Concatenate" onclick = "myFunction()">Click Here!</p>
+<!--Creating Variables and Adding together-->
+<p id="demo"></p>
+<p>A=15 + B=30</p>
+<script>
+var A = 15;
+var B = 30;
+var C = A + B;
+document.getElementById("demo").innerHTML =
+"The value of C is: " + C;
+</script>
+  
+
+
+<p id="demo"></p>
+
     </body>
     </html>
