--- a/Project3_math_operators/Index.html
+++ b/Project3_math_operators/Index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Project3_Functions</title>
             <meta charset="UTF-8">
-                <script src="C:\Users\jrolp\Documents\GitHub\JavaScript-Projects\Project3_functions\JS\main.js"></script>
+                <script src="JS\main.js"></script>
         </title>
     </head>
     <body>
@@ -37,6 +37,8 @@
 
         <button onclick="negation_Operator()">-X =</button>
 <p id="unary"></p>
+
+
 
 <!--End Math Problems using Buttons-->
 
