--- a/Project4_dictionaries/index.html
+++ b/Project4_dictionaries/index.html
@@ -11,6 +11,6 @@
 
 <p id="Dictionary" onclick="my_Dictionary()">Sound a Dog Makes!</p>
 
-
+<p id="Audio" onclick="my_audio_Dictionary()">Band</p>
 
 </html>
