--- a/Project6_ternary_operators_constructors/index.html
+++ b/Project6_ternary_operators_constructors/index.html
@@ -21,7 +21,7 @@
         <br>
     <br>
 <br>
-
+<!--Vehicle Functions-->
 <button onclick="myFunction()">Click This</button><br>
             <p id="Keywords_and_Constructors"></p>
 </body>
