--- a/Project8_string_methods/index.html
+++ b/Project8_string_methods/index.html
@@ -8,6 +8,7 @@
     </head>
 
 <body>
+<!--Concatenate Example-->
     <div>
         <div>
             <div>
@@ -16,6 +17,27 @@
             </div>
         </div>
     </div>
+<!--End Concatenate Example-->
 
+<!--Slice Method-->
+    <div>
+        <div>
+            <p id="Slice"></p>
+            <button onclick="slice_Method()">Click This</button>
+        </div>
+    </div>
+<!--End Slice Method-->
 
+<!--ToUpperCase Method-->
+            <button onclick="myFunction()">Try it</button>
+        <p id="demo">Hello World!</p>
+<!--End ToUpperCase Method-->
+
+<!--String Number Method-->
+    <div>
+        <div>
+            <p id="Numbers_to_string"></p>
+            <button onclick="string_Method()">Click Again</button>
+        </div>
+    </div>
 </body>
