--- a/jQuery/jQuery.html
+++ b/jQuery/jQuery.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+    <!--Link to the Google jQuery files-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
     <script>
